--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -469,10 +469,18 @@ section#Portfolio {
     overflow: hidden;
     .Portfolio-title{
         background-color: rgb(58, 58, 58);
+        // background-image: url(../img/title-bgc.jpg);
+        background-size: cover;;
+        background-attachment: fixed;
         width: 100%;
         height: 100vh;
         transition:1s;
     }
+    // .porfolio_pic{
+    //     background-image: url(../img/title-bgc.jpg);
+    //     background-size: cover;;
+    //     // background-attachment: fixed;
+    // }
         h1{
             height: 100%;
             font-size: 100px;
@@ -558,6 +566,10 @@ section#Portfolio {
                     background-color: rgba(0, 0, 0, 0.795);
                     position: relative;
                     
+                }
+                a:hover{
+                    text-decoration: none;
+
                 }
 
                 @media (max-width:768px) {
@@ -1046,7 +1058,9 @@ section#Portfolio-AI{
         width: 100%;
         height: 100%;
         .swiper-pagination-bullet-active{
-            background-color: rgb(28, 116, 20)
+            background-color: rgb(28, 116, 20);
+            background-color: rgb(248, 196, 26);
+
             
                
         }
@@ -1109,14 +1123,26 @@ section#Portfolio-web{
             margin-top: -50px;
 
         }
+        span{
+            color: rgb(62, 56, 56);
+            font-size: 26px;
+            padding: 0px 50px 30px 150px;
+            margin-top: -80px;
+        }
         @media (max-width:992px) {
             h2{
                 width: 100%;
                 text-align: center;
                 // font-size: 36px;
-                padding: 50px 0px 0px 50px;
+                padding: 50px 0px 0px 0px;
                 margin: auto ;
                 margin-bottom: 30px;
+            }
+            span{
+                color: rgb(62, 56, 56);
+                font-size: 18px;
+                padding: 0px 50px 30px 50px;
+                margin-top: 0px;
             }
         }
 
@@ -1144,6 +1170,7 @@ section#Portfolio-web{
             background-size: cover;
             background-repeat: no-repeat;
             
+            
         }
 
         .text{
@@ -1154,7 +1181,7 @@ section#Portfolio-web{
                 // color: white;
                 // color: rgb(255, 217, 0);
                 color: rgb(42, 42, 42);
-                padding: 50px 0px 0px 50px;
+                padding: 0px 0px 0px 50px;
                 font-size: 36px;
                 font-weight:600;
                 // text-indent: -9999px
@@ -1166,23 +1193,25 @@ section#Portfolio-web{
                 
     
             }
-            .QRcode{
-                display: flex;
-                justify-content: flex-end;
-                .pic{
-                    width: 195px;
-                    height: 195px;
-                   
-                }
-                .horseQR{
-                    background-image: url(../img/horse-QRcode.png);
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    
-                }
-                
-           
+            
+        }
+        .QRcode{
+            display: flex;
+            justify-content: flex-end;
+            padding: 50px 50px 50px 50px ;
+            .pic{
+                width: 195px;
+                height: 195px;
+               
             }
+            .horseQR{
+                background-image: url(../img/horse-QRcode.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                
+            }
+            
+       
         }
         @media (max-width:991px) {
             .webpic1{
@@ -1202,12 +1231,13 @@ section#Portfolio-web{
                     font-size: 24px;
                     padding: 10px 20px;
                 }
-                .QRcode{
-                  
-                  
-                    text-align: end;
                
-                }
+            }
+            .QRcode{
+                padding: 0px 50px 0px 0px ;
+                  
+                text-align: end;
+           
             }
             
 
@@ -1276,7 +1306,7 @@ section#Portfolio-web{
 #workexperiece{
    
         
-    .title{
+    .workexperiece-title{
         width: 100%;
         height: 100vh;
         background-color: rgb(58, 58, 58);
@@ -1589,8 +1619,8 @@ $accent-color: #4a5062;
 
 // --------專業技能-特效-------
 section#professionalskill{
-    background-color: rgb(43, 43, 57);
-    .title{
+    background-color: rgb(76, 76, 100);
+    .professionalskill-title{
         width: 100%;
         height: 100vh;
         background-color: rgb(58, 58, 58);
@@ -1682,7 +1712,7 @@ section#professionalskill{
       .tabs [class*=" tab"] [type="radio"]:hover,
       .tabs [class*=" tab"] [type="radio"]:focus {
         // border-bottom: 1px solid #fd264f;
-        border-bottom: 1px solid rgb(255, 191, 14);
+        border-bottom: 1px solid rgb(228, 156, 147);
 
      }
       .tabs [class^="tab"] [type="radio"]:checked,
@@ -1732,4 +1762,36 @@ section#professionalskill{
     //     margin-left: 100%; }
     //     .tabs .tab-3:last-child  [type="radio"]:checked + div {
     //      margin-left: -100%; }
+}
+
+
+// Top 鍵
+.top {
+    display: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    /* background-color: rgba(184, 135, 11, 0.733); */
+    background-color:rgba(100, 100, 100, 0.438);
+    position: fixed;
+    bottom: 20px;
+    right: 40px;
+
+    text-align: center;
+    line-height: 60px;
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+
+}
+
+.top a {
+    text-decoration: none;
+}
+
+.top:hover{
+    background-color: rgba(255, 245, 238, 0.815);
+    transition: 0.3s;
+    color: rgba(250, 26, 26, 0.849);
+    font-weight: 900;
+    font-size: 40px;
 }
