--- a/style/index.css
+++ b/style/index.css
@@ -675,6 +675,7 @@ section#Portfolio-ps .container-fluid .row .line {
 }
 
 section#Portfolio-ps .container-fluid .row p {
+  text-align: justify;
   font-size: 30px;
   color: white;
   line-height: 60px;
@@ -910,13 +911,16 @@ section#Portfolio-web .bgc-web h2 {
   padding: 0px 0px 100px 150px;
   font-size: 64px;
   font-weight: bolder;
+  margin: auto;
   margin-top: -50px;
 }
 
 section#Portfolio-web .bgc-web span {
+  width: 100%;
   color: #3e3838;
   font-size: 26px;
   padding: 0px 50px 30px 150px;
+  margin: auto;
   margin-top: -80px;
 }
 
@@ -930,8 +934,10 @@ section#Portfolio-web .bgc-web span {
   }
   section#Portfolio-web .bgc-web span {
     color: #3e3838;
-    font-size: 18px;
-    padding: 0px 50px 30px 50px;
+    font-size: 22px;
+    padding: 0px 0px 30px 0px;
+    text-align: center;
+    margin: auto;
     margin-top: 0px;
   }
 }
@@ -939,9 +945,14 @@ section#Portfolio-web .bgc-web span {
 @media (max-width: 576px) {
   section#Portfolio-web .bgc-web h2 {
     font-size: 36px;
-    padding: 50px 0px 0px 50px;
+    padding: 50px 0px 0px 0px;
     margin: auto;
     margin-bottom: 30px;
+  }
+  section#Portfolio-web .bgc-web span {
+    color: #3e3838;
+    font-size: 16px;
+    padding: 0px 15px 30px 15px;
   }
 }
 
@@ -982,8 +993,9 @@ section#Portfolio-web .row .text h3 {
 
 section#Portfolio-web .row .text p {
   color: white;
-  padding: 0px 0px;
+  padding: 0px 20px;
   font-size: 24px;
+  text-align: justify;
 }
 
 section#Portfolio-web .row .QRcode {
@@ -1020,11 +1032,18 @@ section#Portfolio-web .row .QRcode .horseQR {
   }
   section#Portfolio-web .row .text p {
     font-size: 24px;
-    padding: 10px 20px;
+    padding: 10px 30px;
   }
   section#Portfolio-web .row .QRcode {
     padding: 0px 50px 0px 0px;
     text-align: end;
+  }
+}
+
+@media (max-width: 576px) {
+  section#Portfolio-web .row .text p {
+    font-size: 20px;
+    padding: 10px 20px;
   }
 }
 
@@ -1481,7 +1500,7 @@ section#professionalskill h1 {
   section#professionalskill .title {
     width: 100%;
     height: 100vh;
-    font-size: 36px;
+    font-size: 48px;
     color: #f0c6c6;
     display: -webkit-box;
     display: -webkit-flex;
@@ -1496,7 +1515,7 @@ section#professionalskill h1 {
         -ms-flex-align: center;
             align-items: center;
   }
-  section#professionalskill .title h1 {
+  section#professionalskill h1 {
     font-size: 30px;
   }
 }
