--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -7,6 +7,7 @@
 .delepad{
     padding-left: 0px;
     padding-right: 0px;
+    
 
 }
 
@@ -401,7 +402,7 @@ section#aboutme {
         line-height: 40px;
         font-size: 20px;
         h4{
-            padding:: 0px 0px 10px 0px;
+            padding: 0px 0px 10px 0px;
 
             font-size: 28px;
             font-weight: bold;
@@ -1428,9 +1429,10 @@ $accent-color:rgb(61, 60, 55);
 
 .card {
 	width: 420px;
-	height: 340px;
+	height: 410px;
 	margin: 1em;
-	perspective: 1500px;
+    perspective: 1500px;
+    border-radius: 7px;
 	.content {
 		position: relative;
 		width: 100%;
@@ -1569,6 +1571,7 @@ $accent-color:rgb(61, 60, 55);
 
 				-webkit-text-fill-color: transparent;
                 // -webkit-background-clip: text;
+                
 				background-clip: text;
                 
 			}
