--- a/style/index.css
+++ b/style/index.css
@@ -1200,10 +1200,11 @@ section#Portfolio-web .row .text .QRcode .teamQR {
 
 .card {
   width: 420px;
-  height: 340px;
+  height: 410px;
   margin: 1em;
   -webkit-perspective: 1500px;
           perspective: 1500px;
+  border-radius: 7px;
 }
 
 .card .content {
